# retail-analytics-data-platform

./: .gitignore  README.md  pyproject.toml  requirements.txt
docs/: business_context.md  cleaning_rules.md  raw_profile_findings.md
reports/cleaning/run_date = 2026-05-24/: cleaning_summary.csv
reports/cleaning/run_date=2026-05-26/: cleaning_summary.csv
reports/cleaning_validation/run_date=2026-05-24/: cleaning_validation_report.csv
reports/cleaning_validation/run_date=2026-05-26/: cleaning_validation_report.csv
reports/data_quality/run_date=2026-05-23/: raw_quality_checks.csv
reports/raw_profile/run_date = 2026-05-20/: raw_column_profile.csv
src/retail_analytics/: config.py
src/retail_analytics/cleaning/: olist_cleaner.py  olist_rules.py
src/retail_analytics/cli/: cleaning_validation.py  olist_cleaning.py  raw_inventory.py  raw_profile.py  raw_quality.py
src/retail_analytics/ingestion/: raw_inventory.py
src/retail_analytics/models/: cleaning.py  cleaning_validation.py  raw_inventory.py  raw_profile.py  raw_quality.py
src/retail_analytics/profiling/: raw_profile.py
src/retail_analytics/quality/: raw_quality.py
src/retail_analytics/utils/: __init__.py  logging.py
src/retail_analytics/validation/: cleaning_validation.py  raw_files.py  run_date.py
src/retail_analytics_data_platform.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
